--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "game",
   "main": "server.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
